# cpplox

./: .clang-format  .clang-tidy  .codespellrc  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  meson.build
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp  meson.build  object.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp  token_type.hpp
source/tool/: ast_gen.cpp  meson.build
subprojects/: .gitignore  fmt.wrap  gsl.wrap  magic_enum.wrap
test/: CMakeLists.txt
test/source/: cpplox_test.cpp
